--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <h2 id="question"></h2>
   <div id="choices"></div>
   <p id="result"></p>
+  <p id="explanation"></p>
   <button onclick="nextQuestion()">次の問題</button>
 </div>
 
@@ -49,7 +50,8 @@ const quiz = [
       "公的機関の公式文書である",
       "複数の信頼できる報道機関が同時に報じている"
     ],
-    answer: 1
+    answer: 1,
+    explanation: "フェイクニュースは怒りや不安をあおる表現で拡散されやすく、冷静な事実確認をさせない特徴があります。"
   },
   {
     question: "ある情報の信頼性を判断する際、最初に確認すべき点として最も重要なのは？",
@@ -59,7 +61,8 @@ const quiz = [
       "文章の長さ",
       "画像が付いているかどうか"
     ],
-    answer: 1
+    answer: 1,
+    explanation: "情報の信頼性は、内容よりもまず「誰が発信しているか」を確認することが基本です。"
   },
   {
     question: "「この情報はコピペ自由」と書かれていないウェブ記事を引用する際に、正しい対応はどれ？",
@@ -69,7 +72,8 @@ const quiz = [
       "URLを貼れば全文コピーしてよい",
       "改変すれば著作権は発生しない"
     ],
-    answer: 0
+    answer: 0,
+    explanation: "著作権法では、出典を明記し、必要最小限であれば引用が認められています。"
   },
   {
     question: "フィッシング詐欺メールの特徴として最も典型的なものは？",
@@ -79,7 +83,8 @@ const quiz = [
       "必ず添付ファイルが付いている",
       "送信時間が深夜である"
     ],
-    answer: 0
+    answer: 0,
+    explanation: "見た目は本物でも、送信元のURLやドメインが微妙に違うのは典型的な詐欺の特徴です。"
   },
   {
     question: "検索結果の上位に表示される情報について、正しい理解はどれ？",
@@ -89,7 +94,8 @@ const quiz = [
       "公的機関が内容を保証している",
       "最新情報のみが表示される"
     ],
-    answer: 1
+    answer: 1,
+    explanation: "検索順位は正確さではなく、広告やSEO対策の影響を受けることがあります。"
   }
 ];
 
@@ -121,19 +127,24 @@ function checkAnswer(selected) {
   }
 }
 
-function nextQuestion() {
-  current++;
-  if (current < quiz.length) {
-    showQuestion();
+function checkAnswer(selected) {
+  const result = document.getElementById("result");
+  const explanation = document.getElementById("explanation");
+  const correct = quiz[current].answer;
+
+  if (selected === correct) {
+    result.textContent = "⭕ 正解！";
   } else {
-    document.getElementById("question").textContent =
-      `終了！ 正解数：${score} / ${quiz.length}`;
-    document.getElementById("choices").innerHTML = "";
-    document.getElementById("result").textContent = "";
+    result.textContent = `❌ 不正解（正解：${quiz[current].choices[correct]}）`;
   }
+
+  explanation.textContent = "解説：" + quiz[current].explanation;
 }
 
+
 showQuestion();
+  document.getElementById("explanation").textContent = "";
+
 </script>
 
 </body>
